<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">运动帮</string>
    <string name="手机号">手机号</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="modify_success">修改成功</string>
    <string name="Nickname">昵称</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="login_success">登陆成功！</string>
    <string name="cancel_success">注销成功！</string>

    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="cancel_fail">注销失败！请输入正确的用户名与密码！</string>
    <string name="name_already_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】已存在，请重新输入！</string>
    <string name="name_not_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】不存在，请重新输入！</string>
    <string name="user_login_success">用户：<xliff:g example="tom" id="id2">%1$s</xliff:g>登录，欢迎光临！</string>


    <string name="Account">账号</string>
    <string name="AccountHint">用户名/手机号/邮箱</string>
    <string name="ConfirmPwd">确认密码</string>
    <string name="RememberPwd">记住密码</string>
    <string name="ModifyPwd">修改密码</string>
    <string name="AutoLogIn">自动登录</string>
    <string name="VisitorHint">还不想登录或注册？点此以游客身份进入</string>

    <string name="null_hint">账号或密码不能为空</string>
    <string name="not_equal_hint">两次输入的密码需保持一致</string>
    <string name="account_invalid_hint">用户名不是有效的手机号或邮箱</string>
    <string name="no_record">无记录</string>
    <string name="Center">个人中心</string>
    <string name="Username">用户名</string>
    <string name="Logout">注销</string>
    <string name="Exit">退出</string>
    <string name="modify_hint">点击修改</string>

    <string name="uploadAvatar">上传头像</string>
    <string name="takePhoto">拍照</string>
    <string name="chooseFromGallery">从相册选择</string>

    <string name="old_pwd_hint">请输入原密码</string>
    <string name="new_pwd_hint">请输入新密码</string>
    <string name="modify_not_null">原密码、新密码、确认密码均不能为空</string>
    <string name="modify_not_equal">确认密码需与新密码保持一致</string>
    <string name="modify_not_right">原密码错误</string>
    <string name="information_write">学员信息修改</string>
    <string name="button1">男</string>
    <string name="button2">女</string>
    <string name="box1">唱歌</string>
    <string name="box2">跳舞</string>
    <string name="box3">健身</string>
    <string name="myButton">添加学员信息</string>
    <string name="spinner">请选择</string>
    <string name="title_activity_login2">Sign in</string>


    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_password_again">再次输入</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_email">邮箱</string>
    <string name="courier_title">物流查询</string>
    <string name="phone">归属地查询</string>
    <string name="forgetpwd">忘记密码</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
