<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="388dp"
        android:layout_height="152dp"
        tools:layout_editor_absoluteY="-18dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/center_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:civ_fill_color="@color/white"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7">

        </de.hdodenhof.circleimageview.CircleImageView>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_color" />

            <!--用户名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/accountText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/Username"
                    android:textColor="@color/md_green_100"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/center_account"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|end"
                    android:background="@color/transparent"
                    android:text="914077749@qq.com"
                    android:textColor="@color/grey_200"
                    android:textSize="18sp" />
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <!--昵称-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="昵称"
                    android:textColor="@color/md_green_200"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/center_nickname_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|end"
                    android:background="@color/transparent"
                    android:text="@string/modify_hint"
                    android:textColor="@color/grey_200"
                    android:textSize="18sp" />
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <!--密码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/passwordText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="密码"
                    android:textColor="@color/md_green_200"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/center_pwd_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="center_vertical|end"
                    android:text="@string/modify_hint"
                    android:textColor="@color/grey_200"
                    android:textSize="18sp" />
            </LinearLayout>


            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <!--退出登录-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/center_exit_btn"
                    style="@android:style/Widget.Button.Toggle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:elevation="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/Logout"
                    android:textColor="@color/red_button_off"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>