<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbarStyle="outsideInset">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5dip">

        <TextView
            android:id="@+id/tv_stu_text_id"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical|right"
            android:text="学员ID："
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_stu_id"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_stu_text_id"
            android:layout_toRightOf="@id/tv_stu_text_id"
            android:background="#ffffff"
            android:gravity="center"
            android:text="未分配ID"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_name_text"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_alignLeft="@id/tv_stu_text_id"
            android:layout_below="@id/tv_stu_text_id"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical|right"
            android:text="姓名："
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_name_text"
            android:layout_toRightOf="@id/tv_name_text"
            android:hint="请输入姓名，如liukenken"
            android:inputType="textPersonName"
            android:paddingLeft="20dip" />

        <TextView
            android:id="@+id/tv_age_text"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_below="@id/tv_name_text"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical|right"
            android:text="年龄："
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_age_text"
            android:layout_toRightOf="@id/tv_age_text"
            android:hint="请输入年龄"
            android:inputType="number"
            android:maxLength="3"
            android:paddingLeft="20dip" />

        <TextView
            android:id="@+id/tv_sex_text"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_alignLeft="@id/tv_age_text"
            android:layout_below="@id/tv_age_text"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical|right"
            android:text="性别："
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_sex_text"
            android:layout_toRightOf="@id/tv_sex_text"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="男"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="女"
                android:textSize="16sp"></RadioButton>
        </RadioGroup>

        <TextView
            android:id="@+id/tv_likes_text"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_alignLeft="@id/tv_sex_text"
            android:layout_below="@id/rg_sex"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical|right"
            android:text="爱好："
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/box1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg_sex"
            android:layout_toRightOf="@id/tv_likes_text"
            android:text="@string/box1"></CheckBox>

        <CheckBox
            android:id="@+id/box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg_sex"
            android:layout_toRightOf="@+id/box1"
            android:text="@string/box2">

        </CheckBox>

        <CheckBox
            android:id="@+id/box3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg_sex"
            android:layout_toRightOf="@+id/box2"
            android:text="@string/box3"></CheckBox>

        <TextView
            android:id="@+id/tv_phone_text"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_below="@id/tv_likes_text"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical|right"
            android:text="联系电话："
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_phone_text"
            android:layout_toRightOf="@id/tv_phone_text"
            android:hint="请输入手机号"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="20dip" />

        <TextView
            android:id="@+id/tv_traindate_text"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_below="@id/tv_phone_text"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:gravity="center_vertical|right"
            android:text="入学日期"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_traindate"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_traindate_text"
            android:layout_toRightOf="@id/tv_traindate_text"
            android:focusable="false"
            android:hint="点击选择日期"
            android:inputType="date"
            android:paddingLeft="20dip" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/rg_sex"
            android:layout_below="@id/tv_traindate_text"
            android:text="保存"></Button>

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_traindate_text"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/btn_save"
            android:text="重置"></Button>
    </RelativeLayout>
</ScrollView>